Added C of the CRUD

--- a/lab07/views/all-food.hbs
+++ b/lab07/views/all-food.hbs
@@ -2,7 +2,7 @@
 
 {{#block "content"}}
 <h1>Food Records</h1>
-
+<a href="/add-food" class="btn btn-primary">Add Food</a>
 <table class="table">
     <!-- table header -->
     <thead>
